@@ -1152,7 +1152,7 @@ HRESULT WebFrame::elementDoesAutoComplete(IDOMElement *element, BOOL *result)
     if (!inputElement)
         *result = false;
     else
-        *result = (inputElement->inputType() == HTMLInputElement::TEXT && inputElement->autoComplete());
+        *result = inputElement->isTextField() && inputElement->inputType() != HTMLInputElement::PASSWORD && inputElement->autoComplete();
 
     return S_OK;
 }
